Fixed flickering horizontal waterfall lines.

--- a/htdocs/css/openwebrx.css
+++ b/htdocs/css/openwebrx.css
@@ -301,9 +301,9 @@ input[type=range]:disabled {
 	border-style: none;
 	image-rendering: crisp-edges;
 	image-rendering: -webkit-optimize-contrast;
-    width: 100%;
-    height: 200px;
-    will-change: transform;
+	width: 100%;
+	height: 201px;
+	will-change: transform;
 }
 
 #openwebrx-log-scroll
